--- a/style.css
+++ b/style.css
@@ -35,8 +35,6 @@
   text-shadow: 4px 4px 8px black;
 }
 .card img{
-  width: 50px;
-  height: 50px;
   opacity: 0.8;
 }
 .card img:hover {
@@ -44,6 +42,7 @@
 }
 .card-title {
   color: white;
+  text-align: left;
 }
 #footer{
   padding: 30px;
