--- a/style.css
+++ b/style.css
@@ -45,14 +45,19 @@
   text-align: left;
 }
 #footer{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
   padding: 30px;
   background: rgb(30, 30, 30);
   color: lightgrey;
 }
 #footer a {
+  justify-content: space-between;
   color: lightgrey;
-  font-size: 20px;
+  font-size: 30px;
 }
 #footer a:hover {
   color: white;
+  font-size: 35px;
 }
